Add final first practice code

--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
             <td>Hi, I'm your fourth cell</td>
         </tr>
         <tr>
-            <td>Hi</td>
-            <td>Hi</td>
-        </tr>
-        <tr>
-            <td>Hi</td>
-            <td>Hi</td>
+            <td>Second row, first cell</td>
+            <td>Cell 2</td>
+            <td>Cell 3</td>
+            <td>Cell 4</td>
         </tr>
     </table>
 
