Add table caption

--- a/timetable.html
+++ b/timetable.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <h1>School timetable</h1>
-
+    <caption>Jeff's Schedule</caption>
     <table>
         <colgroup>
             <col>
