Add table ids and headers

--- a/soldid.html
+++ b/soldid.html
@@ -48,29 +48,29 @@
             <td headers="gent rings accessories belgium">15</td>
          </tr>
          <tr>
-           <th>Brussels</th>
-           <td>51</td>
-           <td>27</td>
-           <td>38</td>
-           <td>69</td>
-           <td>28</td>
+           <th id="brussels">Brussels</th>
+           <td headers="brussels trousers clothes belgium">51</td>
+           <td headers="brussels skirts clothes belgium">27</td>
+           <td headers="brussels dresses clothes belgium">38</td>
+           <td headers="brussels bracelets accessories belgium">69</td>
+           <td headers="brussels rings accessories belgium">28</td>
          </tr>
          <tr>
-           <th rowspan="2">The Netherlands</th>
-           <th>Amsterdam</th>
-           <td>89</td>
-           <td>34</td>
-           <td>69</td>
-           <td>85</td>
-           <td>38</td>
+           <th rowspan="2" id="netherlands">The Netherlands</th>
+           <th id="amsterdam">Amsterdam</th>
+           <td headers="amsterdam trousers clothes netherlands">89</td>
+           <td headers="amsterdam skirts clothes netherlands">34</td>
+           <td headers="amsterdam dresses clothes netherlands">69</td>
+           <td headers="amsterdam bracelets accessories netherlands">85</td>
+           <td headers="amsterdam rings accessories netherlands">38</td>
          </tr>
          <tr>
-           <th>Utrecht</th>
-           <td>80</td>
-           <td>12</td>
-           <td>43</td>
-           <td>36</td>
-           <td>19</td>
+           <th id="utretcht">Utrecht</th>
+           <td headers="utretcht trousers clothes netherlands">80</td>
+           <td headers="utretcht skirts clothes netherlands">12</td>
+           <td headers="utretcht dresses clothes netherlands">43</td>
+           <td headers="utretcht bracelets accessories netherlands">36</td>
+           <td headers="utretcht rings accessories netherlands">19</td>
          </tr>
        </tbody>
     </table>
