--- a/planets.html
+++ b/planets.html
@@ -16,6 +16,12 @@
             <thead>
                 <tr>
                     <th>
+                        &nbsp;
+                    </th>
+                    <th>
+                        &nbsp;
+                    </th>
+                    <th>
                         Name
                     </th>                    
                     <th>
@@ -48,6 +54,40 @@
                 </tr>
             </thead>
             <tbody>
+                <tr>
+                    <th rowspan= "4" colspan="2">Terrestrial planets</th>
+                        <th>Mercury</th>
+                            <td>0.330</td>
+                            <td>4,879</td>
+                            <td>5427</td>
+                            <td>3.7</td>
+                            <td>4222.6</td>
+                            <td>57.9</td>
+                            <td>167</td>
+                            <td>0</td>
+                            <td>Closest to the Sun</td>
+                <tr>
+                        <th>Venus</th>
+                            <td>4.87</td>
+                            <td>12,104</td>
+                            <td>5243</td>
+                            <td>8.9</td>
+                            <td>2802.0</td>
+                            <td>108.2</td>
+                            <td>464</td>
+                            <td>0</td>
+                            <td></td>
+                        </tr>
+                    
+                </tr>
+                <tr>
+                    <th rowspan="3">Jovian planets</th>
+                    <tr><th>Gas giants</th></tr>
+                    <tr><th>Ice giants</th></tr>
+                </tr>
+                <tr>
+                    <th>Dwarf planets</th>
+                </tr>
                 
             </tbody>
         </table>
