--- a/planets.html
+++ b/planets.html
@@ -21,53 +21,55 @@
                     <th>
                         &nbsp;
                     </th>
-                    <th>
+                    <th scope="col">
                         Name
                     </th>                    
-                    <th>
+                    <th scope="col">
                         Mass (10<sup>24</sup>kg)
                     </th>
-                    <th>
+                    <th scope="col">
                         Diameter (km)
                     </th>
-                    <th>
+                    <th scope="col">
                         Density (kg/m<sup>3</sup>)
                     </th>
-                    <th>
+                    <th scope="col">
                         Gravity (m/s<sup>2</sup>)
                     </th>
-                    <th>
+                    <th scope="col">
                         Length of day (hours)
                     </th>
-                    <th>
+                    <th scope="col">
                         Distance from Sun (10<sup>6</sup>km)
                     </th>
-                    <th>
+                    <th scope="col">
                         Mean temperature (°C)
                     </th>
-                    <th>
+                    <th scope="col">
                         Number of moons
                     </th>
-                    <th>
+                    <th scope="col">
                         Notes
                     </th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <th rowspan= "4" colspan="2">Terrestrial planets</th>
-                        <th>Mercury</th>
-                            <td>0.330</td>
-                            <td>4,879</td>
-                            <td>5427</td>
-                            <td>3.7</td>
-                            <td>4222.6</td>
-                            <td>57.9</td>
-                            <td>167</td>
-                            <td>0</td>
-                            <td>Closest to the Sun</td>
-                <tr>
-                        <th>Venus</th>
+                    <th rowspan= "5" colspan="2" scope="colgroup">Terrestrial planets</th>
+                        <tr>
+                            <th scope="row">Mercury</th>
+                                <td>0.330</td>
+                                <td>4,879</td>
+                                <td>5427</td>
+                                <td>3.7</td>
+                                <td>4222.6</td>
+                                <td>57.9</td>
+                                <td>167</td>
+                                <td>0</td>
+                                <td>Closest to the Sun</td>
+                        </tr>
+                        <tr>
+                        <th scope="row">Venus</th>
                             <td>4.87</td>
                             <td>12,104</td>
                             <td>5243</td>
@@ -78,15 +80,43 @@
                             <td>0</td>
                             <td></td>
                         </tr>
+                        <tr>
+                            <th>Earth</th>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                        </tr>
+                        <tr>
+                            <th>Mars</th>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
                     
                 </tr>
                 <tr>
-                    <th rowspan="3">Jovian planets</th>
-                    <tr><th>Gas giants</th></tr>
-                    <tr><th>Ice giants</th></tr>
+                    <th rowspan="3" colspan="2" scope="colgroup">Jovian planets</th>
+                    <tr>
+                        <th scope="row">Gas giants</th>
+                    </tr>
+                    <tr>
+                        <th scope="row">Ice giants</th>
+                    </tr>
                 </tr>
                 <tr>
-                    <th>Dwarf planets</th>
+                    <th colspan="2">Dwarf planets</th>
                 </tr>
                 
             </tbody>
