--- a/planets.html
+++ b/planets.html
@@ -13,12 +13,23 @@
             <caption>
                 Data about the planets of our solar system (Planetary facts taken from <a href="http://nssdc.gsfc.nasa.gov/planetary/factsheet/">Nasa's Planetary Fact Sheet - Metric</a>).
             </caption>
+            <colgroup>
+                <col>
+                <col>
+                <col style="border: 2px solid black;">
+                <col>
+                <col>
+                <col>
+                <col>
+                <col>
+                <col>
+                <col>
+                <col>
+                <col>
+            </colgroup>
             <thead>
                 <tr>
-                    <th>
-                        &nbsp;
-                    </th>
-                    <th>
+                    <th colspan="2">
                         &nbsp;
                     </th>
                     <th scope="col">
